* Fix bug in Change and NoChange event detectors to prevent them raising events with timestamps in the future
* Fix bug where Change and NoChange event detectors could be initialized to wait too long for the first change/no change event 

*Version 3.5.4*
* Bugfix: Convert dataPointTags, installedModules, and fileStores tables in database conversions
* Ensure publishers who publish data point attributes will not discard the latest reliability information nor allow memory use to grow
* Added wrapping of RQL exceptions
* Workaround to avoid Concurrent Modification Exception at startup due to a bug in Spring Framework
* Bugfix for bulk data point permission updates not working due to un-modifiable collection errors

*Version 3.5.3*
* Fix critical vulnerability on Windows systems
* Fix bug in Email Event Handler REST model where a Mailing List did not have the name or xid set
* Fix bug in Email Event Handler where emails were being prepared for every inactive event even if they were not configured to be sent.
* Monitor the SSL/TLS certificate keystore for changes, if the file changes reload the keystore. Can be disabled by setting ssl.keystore.watchFile=false in the env.properties file
* Add debug logging to serial server socket bridge input stream, trace to serial server socket bridge output stream
* Add env property web.security.followSymlinks to allow Jetty to follow symbolic links, default true
* Case sensitivity for web resources is now enforced on Windows machines
* Removing stacktrace for Log message about access denied to Mango resources to shorten logfile

*Version 3.5.2*
* Improve performance for events by only preparing emails that will be sent.

*Version 3.5.1*
* Fix bug in Event Manager's Event Listeners where listers were getting lost and not being removed when necessary
* Fix bug where generic validation failure messages did not make it into the REST response