@@ -54,6 +54,7 @@
 * Supply the terminated Data Point VO in DataPointListener.terminate method to determine if the point is stopped by the data source or was disabled and the source is still running
 * Fix bug in Change and NoChange event detectors to prevent them raising events with timestamps in the future
 * Fix bug where Change and NoChange event detectors could be initialized to wait too long for the first change/no change event 
+* Upgrade H2 to stop size of database from continuously growing, for this fix Mango will automatically dump and re-import your database on startup as H2 databases from older versions are not compatible in binary form
 
 *Version 3.5.4*
 * Bugfix: Convert dataPointTags, installedModules, and fileStores tables in database conversions
